# cachecash

./: .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  TRANSFER_SETUP.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/build-guest/: Cargo.toml
contracts/build-guest/src/: main.rs
contracts/hyli-utxo-state/: Cargo.toml
contracts/hyli-utxo-state/src/: lib.rs  main.rs  state.rs
contracts/hyli-utxo-state/src/zk/: mod.rs  smt.rs
elf/: hyli-utxo-state  hyli-utxo-state_vk
fixtures/keys/: hyli_smt_incl_proof_key  hyli_smt_incl_proof_key_hash  hyli_utxo_key  hyli_utxo_key_fields.json  hyli_utxo_key_hash  migrate_key_fields.json  points_key  points_key_fields.json  signature_key  signature_key_fields.json  utxo_key  utxo_key_fields.json
fixtures/keys/migrate_key/: vk
fixtures/programs/: agg_agg.json  agg_utxo.json  hyli_smt_incl_proof.json  hyli_utxo.json  migrate.json  points.json  signature.json  utxo.json
front/: .env  .env.production  AGENTS.md  bun.lockb  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
front/public/: hyli_utxo.json
front/src/: App.css  App.tsx  buffer-polyfill.ts  main.tsx
front/src/components/: DebugNotesPanel.tsx  DepositModal.tsx  ManageNotesModal.tsx  TransactionList.tsx  TransferModal.tsx  WithdrawModal.tsx
front/src/hooks/: useConfig.ts  useDebugMode.ts  useEncryptedNotes.ts  useStoredNotes.ts
front/src/services/: AddressService.ts  ConfigService.ts  CryptoService.ts  EncryptedNoteService.ts  KeyService.ts  NodeService.ts  Poseidon2Service.ts  ProofService.ts  ProverService.ts  SmtProofService.ts  TransferService.ts  noteArchive.ts  noteStorage.ts
front/src/types/: note.ts
noir/: Nargo.toml  generate_fixtures.sh
noir/common/: Nargo.toml
noir/common/src/: lib.nr
noir/hyli_smt_incl_proof/: Nargo.toml  Prover.toml  Prover_bad.toml  Prover_front.toml  Prover_good.toml
noir/hyli_smt_incl_proof/src/: main.nr
noir/hyli_utxo/: Nargo.toml  Prover.toml
noir/hyli_utxo/src/: main.nr
noir/utxo/: Nargo.toml
noir/utxo/src/: main.nr
noir/utxo_lib/: Nargo.toml
noir/utxo_lib/src/: lib.nr
pkg/barretenberg/: Cargo.toml
pkg/barretenberg/src/: util.rs
pkg/barretenberg/src/backend/: bb_cli.rs
pkg/barretenberg/src/circuits/: agg_agg.rs  agg_utxo.rs  hyli_smt_incl_proof.rs  hyli_utxo.rs  migrate.rs  mod.rs  points.rs  signature.rs  utxo.rs
pkg/contracts/src/: across.rs  eip7702.rs  rollup.rs  social_recovery.rs  usdc.rs
pkg/element/: Cargo.toml
pkg/element/src/: rand_impls.rs  serde.rs
pkg/hash/: Cargo.toml
pkg/hash/src/: lib.rs  poseidon_alt.rs  poseidon_alt_data.rs
pkg/primitives/: Cargo.toml
pkg/primitives/src/: hash.rs  lib.rs  peer.rs  util.rs
pkg/prover/src/: lib.rs
pkg/utxo-mint-example/: Cargo.toml  README.md
pkg/utxo-mint-example/src/: main.rs
pkg/zk-primitives/: Cargo.toml
pkg/zk-primitives/src/: hyli_smt_incl_proof.rs  hyli_utxo.rs  lib.rs  note_url.rs  util.rs  utxo.rs
server/: Cargo.toml
server/src/: api.rs  app.rs  conf.rs  conf_defaults.toml  hyli_utxo_state_client.rs  init.rs  keys.rs  lib.rs  main.rs  metrics.rs  noir_prover.rs  note_store.rs  prover.rs  smt_incl_prover.rs  tx.rs  types.rs  utils.rs
