[workspace]
resolver = "2"
members = [
    "server",
    "pkg/*",
    "contracts",
    "contracts/hyli-utxo-state",
]

[workspace.dependencies]
anyhow = "1.0.93"
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "main" }
hyli-smt-token = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-smt-token", branch = "main" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "main" }
hyli-net = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-net", branch = "main" }
hyli-verifiers = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-verifiers", branch = "main" }
sp1-sdk = { version = "5.0.3", default-features = false }
sp1-build = "5.0.3"
sp1-zkvm = { version = "5.0.3", default-features = false }
clap = { version = "4.5.28", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std", "registry", "ansi", "json"] }

server = { path = "server", default-features = false, package = "server" }
ts-rs = { version = "^11.0.1", features = ["format", "uuid-impl"] }
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
noirc_driver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.7" }
async-trait = "0.1"
base64 = "0.21.5"
bb_rs = { git = "https://github.com/polybase/aztec-packages", rev = "1a8f9ee136df2184458667f018b496b57226855f" } # v0.82.2-polybase
# bb_rs = { path = "/Users/hwq/Documents/polybase/aztec-packages/barretenberg/bb_rs" }
bitvec = "1.0.1"
bs58 = "0.5.0"

color-eyre = "0.6"
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "serde_json",
    "64-column-tables",
] }
ethnum = "1.5.0"
eyre = "0.6"
figment = { version = "0.10", features = ["env", "toml"] }
flate2 = "1.0.28"
file-lock = "2"
futures = "0.3.26"
hex = { version = "0.4", features = ["serde"] }
insta = { version = "1", features = ["json"] }
lazy_static = "1.4"
once_cell = "1.19.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
proptest = "1.6.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
rand_derive2 = "0.1"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
rust-i18n = "3"
rsa = { version = "0.9", features = ["sha1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
secp256k1 = { version = "0.28.0", features = [
    "rand",
    "global-context",
    "recovery",
] }
sha2 = "0.10.6"
sha3 = "0.10.1"
tempfile = "3.20.0"
test-strategy = "0.3.1"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", features = ["valuable"] }
uint = "0.9.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
# the `de_strict_order` flag is important for maintaining bijection
borsh = { version = "1", features = ["derive", "de_strict_order", "rc"] }

microtype = "0.7"
barretenberg = { path = "./pkg/barretenberg" }
constants = { path = "./pkg/constants" }
element = { path = "./pkg/element" }
hash = { path = "./pkg/hash" }
primitives = { path = "./pkg/primitives" }
zk-circuits = { path = "./pkg/zk-circuits" }
zk-primitives = { path = "./pkg/zk-primitives" }


[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
