[workspace]
resolver = "2"
members = ["server", "contracts", "contracts/hyli-utxo-state"]

[workspace.dependencies]
# Hyli dependencies
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "add_noop_meter_provider" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "add_noop_meter_provider" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "add_noop_meter_provider" }
hyli-turmoil-shims = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-turmoil-shims", branch = "add_noop_meter_provider" }
hyli-verifiers = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-verifiers", branch = "add_noop_meter_provider" }

# Local workspace packages
barretenberg = { path = "./pkg/barretenberg" }
element = { path = "./pkg/element" }
hash = { path = "./pkg/hash" }
primitives = { path = "./pkg/primitives" }
zk-primitives = { path = "./pkg/zk-primitives" }

# Dependencies used by pkg/* packages
# Core utilities
anyhow = "1.0.93"
thiserror = "2"
hex = { version = "0.4", features = ["serde"] }
base64 = "0.22.0"
bs58 = "0.5.0"
once_cell = "1.19.0"

# Serialization (pkg)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
borsh = { version = "1", features = [
  "derive",
  "de_strict_order",
  "rc",
] } # the `de_strict_order` flag is important for maintaining bijection
ts-rs = { version = "^12.0.1", features = [
  "format",
  "chrono-impl",
  "uuid-impl",
] }

# Cryptography (pkg)
secp256k1 = { version = "0.28.0", features = [
  "rand",
  "global-context",
  "recovery",
] }
sha2 = "0.10.6"
sha3 = "0.10.1"

# Math and numeric types (pkg)
ethnum = "1.5.0"
uint = "0.10.0"
bitvec = "1.0.1"

# Randomness (pkg)
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
rand_derive2 = "0.1"

# Noir/ZK dependencies (pkg)
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_driver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
bb_rs = { git = "https://github.com/polybase/aztec-packages", rev = "1a8f9ee136df2184458667f018b496b57226855f" } # v0.82.2-polybase
# bb_rs = { path = "/Users/hwq/Documents/polybase/aztec-packages/barretenberg/bb_rs" }

# Async runtime (pkg)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3.26"

# Database (pkg - optional in element/zk-primitives)
diesel = { version = "2.1.0", features = [
  "postgres",
  "uuid",
  "chrono",
  "r2d2",
  "serde_json",
  "64-column-tables",
] }

# Utilities (pkg)
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tracing = { version = "0.1.37", features = ["valuable"] }
flate2 = "1.0.28"
tempfile = "3.20.0"

# Derive macros (pkg)
microtype = "0.7"

# Testing (pkg)
proptest = "1.6.0"
insta = { version = "1", features = ["json"] }
test-strategy = "0.4.5"


# SP1 dependencies
sp1-sdk = { version = "5.0.3", default-features = false }
sp1-build = { version = "5.0.3", default-features = false }
sp1-zkvm = { version = "5.0.3", default-features = false }

# CLI and logging (for server)
clap = { version = "4.5.28", features = ["derive", "env"] }

# Networking
reqwest = { version = "0.13", features = ["json", "multipart"] }

# Error handling (for server)
color-eyre = "0.6"

[workspace.package]
version = "0.4.1"
edition = "2021"

[patch.crates-io]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
