[package]
name = "server"
edition = "2021"

[dependencies]
contracts = { path = "../contracts", features = ["nobuild"] }
hyli-utxo-state = { path = "../contracts/hyli-utxo-state" }

# Hyli
hyli-modules = { workspace = true }
hyli-verifiers = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "sp1", "axum"] }
sdk = { workspace = true, features = ["tracing", "full-model"] }
hyli-turmoil-shims = { workspace = true }

# pkg/
barretenberg = { workspace = true }
zk-primitives = { workspace = true }
hash = { workspace = true }
element = { workspace = true }

# others
anyhow = "1.0.93"
base64 = "0.22"
axum = { version = "0.8.3", features = ["macros"] }
borsh = { workspace = true }
clap = { workspace = true }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
hex = { workspace = true }
k256 = "0.13.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
bincode = { workspace = true }
sp1-sdk = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }

[features]
instrumentation = []
