[package]
name = "server"
edition = "2021"

[dependencies]
contracts = { path = "../contracts" }
hyli-utxo-state = { path = "../contracts/hyli-utxo-state" }

hyli-registry = { workspace = true }

# Hyli
hyli-modules = { workspace = true, features = ["indexer"] }
hyli-verifiers = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "jolt", "axum", "csi"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
sdk = { workspace = true, features = ["tracing", "full-model"] }
hyli-turmoil-shims = { workspace = true }
hyli-smt-token = { workspace = true, features = ["client"] }

# pkg/
barretenberg = { workspace = true }
zk-primitives = { workspace = true }
hash = { workspace = true }
element = { workspace = true }
acvm = { workspace = true }

# others
anyhow = "1.0.93"
base64 = "0.22"
axum = { version = "0.8.3", features = ["macros"] }
borsh = { workspace = true }
clap = { workspace = true }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
hex = { workspace = true }
k256 = "0.13.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
bincode = { workspace = true }
jolt-sdk = { workspace = true, features = ["host"] }
reqwest = { workspace = true }
tempfile = { workspace = true }
# TODO :add this reexport in jolt sdk
ark-serialize = "0.5.0"

[dev-dependencies]
hyli-modules = { workspace = true, features = ["otlp"] }

[features]
instrumentation = ["hyli-modules/instrumentation"]
