[package]
name = "hyli-utxo-state"
edition = { workspace = true }
rust-version = "1.81"

[[bin]]
name = "hyli-utxo-state"
path = "src/main.rs"
required-features = ["sp1"]
test = false

[dependencies]
borsh = { version = "1.5.0", features = ["derive"] }
hex = "0.4.3"
sdk = { workspace = true, features = ["smt"] }
sparse-merkle-tree = { version = "0.6.1", default-features = false }

sp1-zkvm = { workspace = true, default-features = false, optional = true }

[features]
default = []
sp1 = ["dep:sp1-zkvm", "sdk/sp1"]
nobuild = []
