[package]
name = "hyli-utxo-state"
edition = { workspace = true }
rust-version = "1.94"

[[bin]]
name = "hyli-utxo-state"
path = "src/main.rs"
required-features = ["guest"]
test = false

[dependencies]
borsh = { version = "1.5.0", features = ["derive"] }
hex = "0.4.3"
sdk = { workspace = true, features = ["smt"] }
sparse-merkle-tree = { version = "0.6.1", default-features = false }
acvm = { workspace = true }
bn254_blackbox_solver = { workspace = true }

jolt-sdk = { workspace = true, features = ["guest-std"] }
# jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
#   "guest-std",
# ] }

[features]
default = []
guest = []   # used by jolt provable macro & build script
nobuild = []
