[package]
name = "zk-primitives"
version = "1.3.0"
edition = "2024"

[dependencies]
primitives = { workspace = true }
element = { workspace = true }
hash = { workspace = true }

borsh = { workspace = true }
bs58 = { workspace = true }
ethnum = { workspace = true }
hex = { workspace = true }
noirc_abi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }

[dependencies.ts-rs]
workspace = true
optional = true

[features]
ts-rs = ["dep:ts-rs", "element/ts-rs", "primitives/ts-rs"]
